implementing some improvments

--- a/index.html
+++ b/index.html
@@ -28,8 +28,14 @@
 
   <div class="main-container">
     <div class="calculator">
-      <div>
+      <!-- <div>
         <input readonly value="0" class="screen">
+      </div> -->
+
+
+      <div class="screen">
+        <p class="calc-input"></p>
+        <p class="screen-numbers">0</p>
       </div>
     
       <div class="buttons">
